@@ -111,7 +111,7 @@ class Roda
     # available in your email views.
     module Mailer
       OPTS = {}.freeze
-
+      RodaPlugins.deprecate_constant(self, :OPTS)
       REQUEST_METHOD = "REQUEST_METHOD".freeze
       RodaPlugins.deprecate_constant(self, :REQUEST_METHOD)
       PATH_INFO = "PATH_INFO".freeze
@@ -139,8 +139,8 @@ class Roda
 
       # Set the options for the mailer.  Options:
       # :content_type :: The default content type for emails (default: text/plain)
-      def self.configure(app, opts=OPTS)
-        app.opts[:mailer] = (app.opts[:mailer]||{}).merge(opts).freeze
+      def self.configure(app, opts=RodaPlugins::OPTS)
+        app.opts[:mailer] = (app.opts[:mailer]||RodaPlugins::OPTS).merge(opts).freeze
       end
 
       module ClassMethods
