@@ -23,17 +23,18 @@ class Roda
     # Note that this plugin loads the :partials plugin.
     module PadrinoRender
       OPTS = {}.freeze
+      RodaPlugins.deprecate_constant(self, :OPTS)
 
       # Depend on the render plugin, since this overrides
       # some of its methods.
-      def self.load_dependencies(app, opts=OPTS)
+      def self.load_dependencies(app, opts=RodaPlugins::OPTS)
         app.plugin :partials, opts
       end
 
       module InstanceMethods
         # Call view with the given arguments, so that render
         # uses a layout by default.
-        def render(template, opts=OPTS)
+        def render(template, opts=RodaPlugins::OPTS)
           view(template, opts)
         end
       end
