@@ -21,13 +21,13 @@ class Roda
     # Note that this plugin automatically loads the :render plugin.
     module Partials
       OPTS = {}.freeze
-
+      RodaPlugins.deprecate_constant(self, :OPTS)
       SLASH = '/'.freeze
       RodaPlugins.deprecate_constant(self, :SLASH)
 
       # Depend on the render plugin, since this overrides
       # some of its methods.
-      def self.load_dependencies(app, opts=OPTS)
+      def self.load_dependencies(app, opts=RodaPlugins::OPTS)
         app.plugin :render, opts
       end
 
@@ -35,7 +35,7 @@ class Roda
         # Renders the given template without a layout, but
         # prefixes the template filename to use with an 
         # underscore.
-        def partial(template, opts=OPTS)
+        def partial(template, opts=RodaPlugins::OPTS)
           opts = parse_template_opts(template, opts)
           if opts[:template]
             template = opts[:template].split('/')
