@@ -26,6 +26,7 @@ class Roda
     #   end
     module RunHandler
       OPTS = {}.freeze
+      RodaPlugins.deprecate_constant(self, :OPTS)
 
       module RequestMethods
         # If a block is given, yield the rack response array to it.  The response can
@@ -34,7 +35,7 @@ class Roda
         # If the <tt>:not_found=>:pass</tt> option is given, and the rack response
         # returned by the app is a 404 response, do not return the response, continue
         # routing normally.
-        def run(app, opts=OPTS)
+        def run(app, opts=RodaPlugins::OPTS)
           res = catch(:halt){super(app)}
           yield res if block_given?
           throw(:halt, res) unless opts[:not_found] == :pass && res[0] == 404
